Gtk-3.20&3.22: [GtkInfoBar] Fix inivisible 'selected labels'

--- a/gtk-3.22/_common.scss
+++ b/gtk-3.22/_common.scss
@@ -4538,11 +4538,8 @@ infobar {
       -gtk-outline-radius: 100px;
     }
   }
-  & label:selected,
-  & label:selected:focus,
-  & label:selected:hover {
-    background-color: darken($selected_bg_color, 10%);
-  }
+
+  selection { background-color: darken($selected_bg_color, 10%); }
 
   progressbar { // use 'white' bit and trough
     trough { background-color: gtkopacity($selected_fg_color, 0.2); }
