--- a/gtk-3.22/gtk-dark.css
+++ b/gtk-3.22/gtk-dark.css
@@ -6992,16 +6992,10 @@ infobar, NautilusTrashBar {
     padding: 0.50376rem 0.20301rem 0.50376rem;
     border-radius: 100px;
     -gtk-outline-radius: 100px; }
-.info label:selected, .info label:selected:focus, .info label:selected:hover,
-.question label:selected,
-.question label:selected:focus,
-.question label:selected:hover,
-.warning label:selected,
-.warning label:selected:focus,
-.warning label:selected:hover,
-.error label:selected,
-.error label:selected:focus,
-.error label:selected:hover {
+.info selection,
+.question selection,
+.warning selection,
+.error selection {
   background-color: #008fa1; }
 .info progressbar trough,
 .question progressbar trough,
